# Elemental-Sorcerer

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
assets/levels/: example.ldtk  level.ldtk  test.ldtk
assets/levels/level/backups/backup_2022-08-26_17-06-38/: test.ldtk
assets/levels/level/backups/backup_2022-08-27_11-44-17/: level.ldtk
assets/levels/level/backups/backup_2022-08-27_14-44-15/: level.ldtk
assets/levels/level/backups/backup_2022-08-27_15-11-26/: level.ldtk
assets/levels/level/backups/backup_2022-08-27_15-21-50/: level.ldtk
assets/levels/level/backups/backup_2022-08-27_15-24-51/: level.ldtk
assets/levels/level/backups/backup_2022-08-27_15-31-44/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_14-54-05/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_14-56-59/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_14-59-11/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_15-00-17/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_15-04-27/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_16-43-07/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_19-08-59/: level.ldtk
assets/levels/level/backups/backup_2022-08-28_19-33-41/: level.ldtk
assets/levels/level/backups/backup_2022-08-29_10-05-23/: level.ldtk
assets/levels/level/backups/backup_2022-08-29_10-07-56/: level.ldtk
assets/levels/test/backups/backup_2022-08-25_12-05-04/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-07-30/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-07-59/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-12-38/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-21-51/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-37-36/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-57-10/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_12-59-34/: test.ldtk
assets/levels/test/backups/backup_2022-08-25_14-49-44/: test.ldtk
src/: abilities.rs  animation.rs  audio.rs  camera.rs  damage.rs  debug.rs  destruction.rs  input.rs  level.rs  main.rs  physics.rs
src/entity/: ability.rs  block.rs  checkpoint.rs  fan.rs  goblin.rs  lava.rs  mod.rs  player.rs  signpost.rs  torch.rs  trophy.rs  water.rs
src/state/: ability_menu.rs  game.rs  load_game.rs  load_menu.rs  loading.rs  main_menu.rs  mod.rs
(+6 files in other folders)
