[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0" }
#  bevy = { version = "0.8.0", features = ["dynamic"] }
bevy-inspector-egui = "0.12.1"
bevy_prototype_debug_lines = "0.8"
bevy_ecs_ldtk = { version = "0.4.0", features = ["atlas"] }
heron = { version = "4.0.0", features = ["debug-2d"] }
console_error_panic_hook = "0.1"


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

